--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h1>Why Choose us</h1>
       <div class="list-box">
         <div class="box">
-          <img src="" alt="" />
+          <img src="images/customer-service.png" alt="icon-1" />
           <h2>support</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing. Harum,
@@ -106,7 +106,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="" alt="" />
+          <img src="images/experience.png" alt="icon-2" />
           <h2>experience</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing. Harum,
@@ -114,7 +114,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="" alt="" />
+          <img src="images/creative-brain.png" alt="icon-3" />
           <h2>creative</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing. Harum,
@@ -122,7 +122,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="" alt="" />
+          <img src="images/puzzle.png" alt="icon-4" />
           <h2>solution</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing. Harum,
