commit list  social media

--- a/index.html
+++ b/index.html
@@ -133,5 +133,81 @@
     </section>
 
     <!-- /choise -->
+
+    <!-- decoration -->
+
+    <section class="decoration">
+      <h1>Decoration list</h1>
+      <div class="list-decoration-box">
+        <div class="box">
+          <img src="images/deco1.jpg" alt="" />
+          <h2>decoration chamber</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <a href="#" class="orange-link">order the deco</a>
+        </div>
+        <div class="box">
+          <img src="images/deco2.jpg" alt="" />
+          <h2>decoration chamber</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <a href="#" class="orange-link">order the deco</a>
+        </div>
+        <div class="box">
+          <img src="images/deco3.jpg" alt="" />
+          <h2>decoration chamber</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <a href="#" class="orange-link">order the deco</a>
+        </div>
+        <div class="box">
+          <img src="images/deco4.png" alt="" />
+          <h2>decoration chamber</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <a href="#" class="orange-link">order the deco</a>
+        </div>
+        <div class="box">
+          <img src="images/deco1.jpg" alt="" />
+          <h2>decoration chamber</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <a href="#" class="orange-link">order the deco</a>
+        </div>
+        <div class="box">
+          <img src="images/deco2.jpg" alt="" />
+          <h2>decoration chamber</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <a href="#" class="orange-link">order the deco</a>
+        </div>
+       
+      </div>
+    </section>
+    <!-- /decoration -->
+
+    <!-- footer -->
+
+    <footer>
+      <div class="footer-content">
+        <h1><span class="logo-first"> my </span> immobilier</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, cum.
+          Vero, explicabo illum. Repudiandae.
+        </p>
+        <h2>contact us</h2>
+        <ul class="list-social-media">
+          <li class="social-media-items">
+1
+          </li>
+          <li class="social-media-items">
+            2
+          </li>
+          <li class="social-media-items">
+         3  
+          </li>
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright ©2025 AttouSpan. Desighed by AttouMed</p>
+      </div>
+    </footer>
+
+    <!-- /footer -->
   </body>
 </html>
+ 
