commit final responsive site web

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link
       rel="stylesheet"
       media="screen   and (max-width: 936px)   "
-      href="tablate.css"
+      href="tablet.css"
     />
     <link
     rel="stylesheet"
-    media="screen   and (max-width: 558px)   "
+    media="screen   and (max-width: 600px)   "
     href="mobile.css"
   />
     <script
