--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <script src="https://unpkg.com/scrollreveal"></script>
     <title>site web Immobilier</title>
     <link rel="stylesheet" href="style.css" />
 
@@ -72,7 +72,7 @@
       <!-- home -->
       <section class="home">
         <div class="left">
-          <h1>Best Interior design for your home.</h1>
+          <h1>Best Interior design for your home.  test</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
             excepturi sint tempora quidem debitis eligendi! Earum sapiente amet
